[workspace]
resolver = "3"
members = ["rsolace", "rsolace-sys", "pyrsolace"]

[workspace.dependencies]
chrono = "0.4.41"
kanal = "0.1.1"
dashmap = "6.1.0"
enum_primitive = "0.1.1"
snafu = "0.8.9"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dotenvy = "0.15.7"
rstest = "0.26.1"
bindgen = "0.72.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
tar = "0.4.44"
flate2 = "1.1.2"
crossbeam = "0.8.4"
# once_cell = "1.21.3"
pyo3 = "0.20.0"
pyo3-asyncio = "0.20.0"
# rayon = "1.11.0"
