[package]
name = "pyrsolace"
version = "0.3.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrsolace"
crate-type = ["cdylib"]

[dependencies]
chrono = { workspace = true }
crossbeam = { workspace = true }
kanal = { workspace = true }
# once_cell = { workspace = true }
pyo3 = { workspace = true, features = [
    "extension-module",
    "chrono",
    "abi3-py37",
] }
pyo3-asyncio = { workspace = true, features = ["tokio-runtime"] }
# rayon = "1.10.0"
rsolace = { path = "../rsolace", features = ["channel", "tokio"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
