[package]
name = "rsolace"
version = "0.3.4"
edition = "2024"
description = "Solace bindings for the Rust"
keywords = ["solace"]
readme = "README.md"
license = "GPL-3.0-only"
categories = ["api-bindings"]
repository = "https://github.com/Yvictor/rsolace"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
kanal = { workspace = true, optional = true }
dashmap = { workspace = true }
enum_primitive = { workspace = true }
rsolace-sys = { path = "../rsolace-sys" }
snafu = { workspace = true, features = ["rust_1_61"] }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["channel", "tokio"]
raw = []
channel = ["dep:kanal"]
tokio = ["dep:tokio"]
